# stolen

task/: CMakeLists.txt  README.md
task/src/: Example.cpp  Str.cpp
